# LBM-Suite2p-Python

./: .buildinfo  .gitattributes  .gitignore  README.md  genindex.html  index.html  objects.inv  publication.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: build_and_deploy_docs.yml
_sources/: publication.md
_sources/examples/notebooks/: s2p_binaryfile.ipynb  suite2p_segmentation.ipynb
_static/: documentation_options.js
_static/tippy/: index.32d85334-23bc-490c-b4c2-85e652a31e5b.js  index.f4009197-476b-489b-962e-6a5074f97c3c.js  publication.99719d9b-47d8-4cf9-a451-fb65f2add969.js  publication.a5ac4457-3cad-4965-8237-d84243c5d990.js
_static/tippy/examples/: index.2044889d-6613-40ac-b271-f581a660152d.js  index.8560990e-c33d-4a31-a7f5-6cb6107bf286.js
_static/tippy/examples/notebooks/: s2p_binaryfile.79c4ce75-dfa4-465a-bfaf-93f36ca41c49.js  s2p_pipeline.fd4d036c-6924-4db8-863d-6c94f3741ca9.js  (+2 more)
demos/: high_low_frequency.ipynb
demos/notebooks/: s2p_binaryfile.ipynb  s2p_pipeline.ipynb  suite2p_segmentation.ipynb  whitening.ipynb
docs/: caiman.inv  conf.py  index.md  requirements.txt
docs/examples/: index.md
docs/examples/notebooks/: s2p_bin.ipynb  s2p_nb.ipynb  suite2p_demo.ipynb  suite2p_ops.ipynb
examples/: index.html
examples/notebooks/: s2p_binaryfile.html  s2p_pipeline.html  suite2p_ops.py  suite2p_segmentation.html  whitening.html
lbm_suite2p_python/: __init__.py  __main__.py  _version.py  demo_s2p.py  run_lsp.py  utils.py
scripts/: run_cellpose.ipynb  run_cellpose.py
