[build-system]
requires = ["setuptools", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "lbm_suite2p_python/_version.py"
versionfile_build = "lbm_suite2p_python/_version.py"
tag_prefix = "lbm_suite2p_python-"
parentdir_prefix = "lbm_suite2p_python-"
